# kulam

./: .gitignore  CMakeLists.txt  linux-mingw64-gen.sh
cmake/: rut.cmake  x86_64-w64-mingw32.cmake
gulaman/: CMakeLists.txt
gulaman/sdk/: CMakeLists.txt
gulaman/sdk/include/gulaman-sdk/: gulaman-sdk.hh
gulaman/src/: api_impl.cc  core_plugin.cc  global.hh  logging.cc  logging.hh  main.cc  modules.cc  modules.hh  plugin.cc  plugin.hh
kulam/: CMakeLists.txt
kulam/sdk/: CMakeLists.txt
kulam/sdk/include/kulam-sdk/: kulam-sdk.hh
kulam/src/: main.cc
